﻿Subtitle Edit Changelog

3.3.13 (xth February 2013)
* NEW:
   * Compare window now has an option to "ignore line breaks" - thx Krystian
   * Bridge gap in durations now have minimum display time - thx Krystian
* IMPROVED:
   * Updated Korean language file - thx domddol
   * Updated Chinese language file - thx Leon
   * Updated German language file - thx Siegwarth 
   * Updated Dutch language file - thx Quetsbeek
* FIXED:
  * Waveform/spectrogram: Moving start/end with ALT down now always works - thx Leon
  * Waveform/spectrogram: Move border left/right now also always works even when it's 
    near next/prev border
  * Fixed transparent background in "OCR window" regarding transport streams
  * Now Viewnamese language actually shows in the "Choose language" dialog
  * Timed Text - List view context menu "Set language" had wrong text
  * Subtitle preview can now show both font and italic for same text - thx Drago
  * Fixed bug decoding dvb sub - thx aMvEL
  * Fixed possible crash in OCR window (if no language is available)
  * "OCR window" - Norweigan bokmål now works as spell check language
  * Disabled saving of empty files


3.3.12 (12th January 2013)
* NEW:
   * Added initial support for importing DVB subtitles from transport streams
   * Added "File -> Import images"
   * Added "Tools -> Merge lines with same text"
   * Importing from plain text file,  "One line is one subtitle" now has a 
     "Line break" option - thx Adrian   
   * Added xml subtitle format "FLVCoreCuePoints" - thx Jon
   * Added some support for fxpxml 1.3
   * Added link to Sinhala spell check dictionary
* IMPROVED:
   * Updated Portuguese language file - thx moob
   * Updated Vietnamese language file - thx everytime
   * Updated Basque language file - thx Xabier
   * Updated Korean language file - thx domddol
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Updated Croatian language file - thx Jozo Marić
   * Now remembers RTL mode - thx FTABoy