@@ -1710,6 +1710,7 @@ can edit in same subtitle file (collaboration)",
                 WaveFormShowGridLines = "Show grid lines",
                 ReverseMouseWheelScrollDirection = "Reverse mouse wheel scroll direction",
                 WaveFormAllowOverlap = "Allow overlap (when moving/resizing)",
+                WaveFormFocusMouseOver = "Set focus on mouse over",
                 WaveformBorderHitMs1 = "Border marker hit must be within",
                 WaveformBorderHitMs2 = "milliseconds",
                 WaveFormColor = "Color",
